--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.11.41",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.7.5",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
     "unocss": "^0.39.3",
